Mais coisas estão agora no YAML.

--- a/invoke.yaml
+++ b/invoke.yaml
@@ -2,3 +2,8 @@
 BackupToolkit:
     ZFS_BIN: "/sbin/zfs"
     ZFS_ROOT_POOLNAME: backupstank
+    
+    ZFS_ROOT_MOUNTPOINT: "/home/jj/TestBackups/backups_tank"
+
+    RSYNC_BIN: "/usr/bin/rsync"
+    RSYNC_EXCLUSIONS: [ ".recycle", ".zfs", ]
