--- a/DriveH.yaml
+++ b/DriveH.yaml
@@ -8,7 +8,7 @@ BackupToolkit:
                 'orig_ip':          "192.168.100.105"
                 'orig_path':        "/srv/storage/outras_drives_usl/h/"
             'localspecs':
-                'dest_path':        "/home/jj/TestBackups/backups_tank/h_drivee"
+                'dest_path':        "/home/jj/TestBackups/backups_tank/h_drive"
     
-    ZFS_DATASETS:   [ "backupstank/h_drivee" ]
+    ZFS_DATASETS:   [ "backupstank/h_drive" ]
     ZFS_SKIP_LIST:  [ ]
